# o19

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  MANIFEST.md  NEXTUP.md  README.md  TODO_LATER_FOR_FULL_AWESOMENESS.md  for_kimi.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
crates/aidl-spiral/: AGENTS.md  Cargo.toml  DIFF_ANALYSIS.md  PLAN.md  RING_LAYER_ANALYSIS.md  SPIRAL_DEMO.md  STATUS.md  WORKSPACE_INTEGRATION.md
crates/aidl-spiral/src/: architecture.rs  cmd_generator.rs  generator.rs  hookup.rs  jni_generator.rs  lib.rs  main.rs  meta_parser.rs  parser.rs  traits.rs  ts_generator.rs  workspace.rs
crates/aidl-spiral/stacks/: README.md  foundframe_tauri_desktop.aidl  radicle_foundframe_tauri.aidl
crates/android-activities/: BUILD.md  BUILD_QUICKSTART.md  Cargo.toml  INTEGRATION.md  Makefile  build-rust.sh  build.gradle  build.rs  package.json  settings.gradle
crates/android-activities/android/: AndroidManifest.xml
crates/android-activities/examples/: client_usage.rs
crates/android-activities/src/: aidl_client.rs  aidl_service.rs  lib.rs
crates/foundframe/: Cargo.toml  PKB_SERVICE_ENHANCEMENTS.md  README.md
crates/foundframe-android/: BUILD.md  Cargo.toml  INTEGRATION.md  JNI_MACROS.md  PLAN.md  build.gradle  proguard-rules.pro  settings.gradle
crates/foundframe-android/android/: AndroidManifest.xml
crates/foundframe-android/android/res/drawable/: ic_file.xml
crates/foundframe-android/android/res/layout/: activity_receive_share.xml
crates/foundframe-android/old/: aidl_client.rs  lib.rs
crates/foundframe-android/spiral/: README.md
crates/foundframe-android/spiral/i_content_mgmt/: commands.rs  jni_glue.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spiral/i_device_mgmt/: jni_glue.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spiral/i_event_callback/: jni_glue.rs  mod.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spiral/i_event_mgmt/: commands.rs  jni_glue.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spiral/i_node_mgmt/: jni_glue.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spiral/i_pkb_mgmt/: jni_glue.rs  platform_trait.rs  service_impl_template.rs
crates/foundframe-android/spire/src/: lib.rs
crates/foundframe-android/src/: aidl_service.rs
crates/foundframe-android/src/jni_macros/: types.rs
crates/foundframe-tauri/: .gitignore  ANDROID_INTEGRATION.md  Cargo.toml  README.md  build.rs  package.json  readme  tsconfig.json
crates/foundframe-tauri/android/: build.gradle.kts  settings.gradle
crates/foundframe-tauri/android/src/main/: AndroidManifest.xml
crates/foundframe-tauri/js-dist/: drizzleProxy.d.ts  drizzleProxy.d.ts.map  index.cjs  index.cjs.map  index.d.ts  index.d.ts.map  index.js  index.js.map
crates/foundframe-tauri/js-dist/adaptors/: device.adaptor.d.ts  device.adaptor.d.ts.map  index.d.ts  index.d.ts.map  preview.adaptor.d.ts  preview.adaptor.d.ts.map
crates/foundframe-tauri/loom/: WARP.ts
crates/foundframe-tauri/permissions/: default.toml
crates/foundframe-tauri/permissions/autogenerated/: reference.md
crates/foundframe-tauri/permissions/autogenerated/commands/: add-bookmark.toml  add-conversation.toml  add-media-link.toml  add-person.toml  add-post.toml  allow_capture_photo.toml  allow_check_camera_permissions.toml  allow_check_followers_and_pair.toml  allow_confirm_pairing.toml  allow_generate_pairing_qr.toml  allow_is_camera_active.toml  allow_list_paired_devices.toml  allow_parse_pairing_qr.toml  allow_request_camera_permissions.toml  allow_set_camera_mode.toml  allow_start_camera.toml  allow_stop_camera.toml  allow_unpair_device.toml  check_camera_permissions.toml  check_followers_and_pair.toml  check_service_status.toml  confirm-pairing.toml  (+33 more)
crates/foundframe-tauri/permissions/schemas/: schema.json
crates/foundframe-tauri/spire/: README.md
crates/foundframe-tauri/spire/src/: commands.rs  desktop.rs  desktop_mainline_bridge.rs  error.rs  extension.rs  lib.rs  models.rs  platform.rs
crates/foundframe-tauri/src/: commands.rs  desktop.rs  error.rs  index.ts  lib.rs  models.rs  platform.rs  sql_proxy.rs
crates/foundframe-tauri/src/mobile/: android.rs  ios.rs  mod.rs
crates/foundframe-tauri/ts/: drizzleProxy.ts  index.ts
crates/foundframe-tauri/ts/adaptors/: device.adaptor.ts  index.ts  preview.adaptor.ts  theStream.adaptor.ts
crates/foundframe-to-sql/: Cargo.toml  build.rs  migrations
crates/foundframe-to-sql/src/: error.rs  lib.rs
crates/foundframe/docs/: device_pairing_flow.md
crates/foundframe/loom/: WARP.ts
crates/foundframe/loom/treadles/: dbbindings.ts
crates/foundframe/src/: bookmark.rs  conversation.rs  device.rs  error.rs  lib.rs  log.rs  media.rs  person.rs  post.rs  radicle.rs  signal.rs  thestream.rs
crates/foundframe/src/db/: actor.rs  indexer.rs  mod.rs  oneshot.rs
crates/foundframe/src/pkb/: chunk.rs  directory.rs  entry.rs  merge.rs  mod.rs  radicle.rs  service.rs  stream.rs
crates/foundframe/src/preview/: html.rs
crates/foundframe/tests/: end_to_end_workflow_test.rs  local_dir_adapter_test.rs  media_source_registry_test.rs  pkb_chunk_test.rs  pkb_entry_test.rs  pkb_service_integration_test.rs  signal_test.rs
crates/foundframe/tests/common/: db.rs  mod.rs  temp.rs
crates/tauri-plugin-o19-ff/: Cargo.toml  README.md  package.json
crates/tauri-plugin-o19-ff/android/: build.gradle.kts
crates/tauri-plugin-o19-ff/ios/Sources/: ApiPlugin.swift
crates/tauri-plugin-o19-ff/permissions/autogenerated/: reference.md
crates/tauri-plugin-o19-ff/permissions/schemas/: schema.json
crates/tauri-plugin-o19-ff/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  platform.rs  sql_proxy.rs
crates/tauri-plugin-o19-ff/src/mobile/: android.rs  ios.rs
crates/tauri-plugin-o19-ff/ts/: drizzleProxy.ts  index.ts
crates/tauri-plugin-o19-ff/ts/adaptors/: bookmark.adaptor.ts  conversation.adaptor.ts  index.ts  media.adaptor.ts  person.adaptor.ts  post.adaptor.ts  preview.adaptor.ts
(+227 files in other folders)
