[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "circulari.ty"
license = "MIT OR Apache-2.0"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:9428393hnwu293478293847293875"
version = "0.9.0"

rust-version = "1.85.0"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "1.0"

reqwest = { version = "0.13.2", features = ["json", "stream"] }
scraper = "0.22"
nom-exif = "2.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

base64 = "0.22"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4"] }

anyhow = "1.0.101"
futures-util = "0.3.31"
rand = "0.10.0"
rand_chacha = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hex = "0.4.3"

tauri = { version = "2" }
o19-foundframe = { path = "crates/foundframe" }
libcaesium = { version = "0.17", features = ["jpg", "webp"] }
jni = "0.21.1"
rustls-platform-verifier = "0.6.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tauri-plugin = { version = "2", features = ["build"] }
tauri-build = "2"

[workspace.lints]
clippy.type_complexity = "allow"
clippy.enum_variant_names = "allow"

[profile.container]
inherits = "release"
debug = true
incremental = false
