[package]
name = "aidl-spiral"
version = "0.1.0"
edition = "2021"
description = "Spiral generation from AIDL to Rust + Java + TypeScript"
authors = ["Kimi <kimi@circulari.ty>"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"

[lib]
name = "aidl_spiral"
path = "src/lib.rs"

[[bin]]
name = "aidl-spiral"
path = "src/main.rs"
