[package]
name = "android-activities"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
o19-foundframe = { path = "../../crates/foundframe" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rsbinder = { workspace = true }
async-trait = "0.1.89"

[build-dependencies]
rsbinder-aidl = "0.6.0"

[lints]
workspace = true
