[package]
name = "o19-foundframe-tauri"
description = "The Tauri bindings (and foundframe implementation FFI) for o19 Circulari.ty apps."
version = "0.1.0"
edition = "2024"
authors = ["Circulari.ty"]

links = "o19-foundframe-tauri"

[dependencies]
tauri = {workspace = true }
o19-foundframe = { workspace = true }
foundframe-to-sql = { workspace = true }
thiserror = { workspace = true }
reqwest = {workspace = true, features = ["json", "stream"] }
libcaesium = {workspace = true, features = ["jpg", "webp"] }
serde = {workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
jni = "0.21.1"
radicle = { workspace = true }
rustls-platform-verifier = { workspace = true }
sqlite = { workspace = true, features = ["bundled"] }
tracing = { workspace = true }

# Android-only: connect to FoundframeRadicle singleton service
[target.'cfg(target_os = "android")'.dependencies]
o19-foundframe-android = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
