[package]
name = "foundframe-to-sql"
version = "0.1.0"
edition = "2021"
description = "TheStream™ to SQLite adapter - converts events to database writes"
license = "MIT OR Apache-2.0"

[dependencies]
# Our crates
o19-foundframe = { path = "../foundframe" }

# SQLite (same as @o19/foundframe-tauri uses)
sqlite = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
