[package]
name = "o19-foundframe"
description = "The core of a foundational framework (o19) for Circulari.ty apps."
version = "0.1.0"
edition = "2024"
authors = ["Circulari.ty"]
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]

[lib]
crate-type = ["dylib", "rlib"]
bench = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Radicle dependencies
radicle = { workspace = true }
radicle-node = { workspace = true }
radicle-crypto = { workspace = true }
radicle-signals = { workspace = true }
crossbeam-channel = { workspace = true }
zeroize = { workspace = true }
walkdir = "2.5"
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = ["json", "stream"] }
sqlite = { workspace = true, features = ["bundled"] }

# for media scraping and previewing
scraper = { workspace = true }
nom-exif = { workspace = true }
image = { workspace = true, default-features = false, features = ["jpeg", "png", "webp", "gif"] }

base64 = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

anyhow = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = { workspace = true }

# Emoji identity encoding
emoji-from-entropy = { path = "../emoji-from-entropy" }
urlencoding = "2.1"
