[package]
name = "tauri-plugin-o19-ff"
description = "The Tauri bindings (and foundframe implementation FFI) for o19 Circulari.ty apps."
version = "0.1.0"
edition = "2024"
authors = ["Circulari.ty"]

links = "tauri-plugin-o19-ff"

[dependencies]
tauri = {workspace = true }
o19-foundframe = { workspace = true }
foundframe-to-sql = { path = "../foundframe-to-sql" }
thiserror = { workspace = true }
reqwest = {workspace = true, features = ["json", "stream"] }
libcaesium = {workspace = true, features = ["jpg", "webp"] }
serde = {workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
jni = "0.21.1"
radicle = { workspace = true }
rustls-platform-verifier = { workspace = true }
sqlite = { workspace = true, features = ["bundled"] }
tracing = { workspace = true }

# Android-only: connect to FoundframeRadicle singleton service
[target.'cfg(target_os = "android")'.dependencies]
android-activities = { path = "../../crates/android-activities" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
